# packtb

./: .gitignore  .notes.rs.notes
actor_demo/: Cargo.toml
actor_demo/src/: main.rs
atomic_and_locks/1_basics/: summary.md
atomic_and_locks/2_atomics/: Cargo.toml  summary.md
atomic_and_locks/2_atomics/src/: fetchnmod.rs  id_allocation.rs  lazy.rs  lib.rs  main.rs  progress_report_multithread.rs  statistics.rs
atomic_and_locks/3_memory_ordering/: Cargo.toml
atomic_and_locks/4_spin_lock/: summary.md
atomic_and_locks/4_spin_lock/src/: main.rs
atomic_and_locks/5_channels_self_made/: Cargo.toml
atomic_and_locks/5_channels_self_made/src/: main.rs  runtime_check.rs  unsafe_channel.rs
atomic_and_locks/basics/: summary.md
atomic_and_locks/basics/src/: main.rs
blockchain/: Cargo.toml
blockchain/src/: blockchain.rs  main.rs
brain_teasers/: Cargo.toml
brain_teasers/src/: amnesia_12.rs  byte_sized_chunks_4.rs  constant_loops_23.rs  double_or_nothing_16.rs  hello_bonjour_20.rs  home_on_the_range_24.rs  how_long_is_a_vector_17.rs  how_long_is_string_5.rs  main.rs  mutable_immutables_18.rs  non_standart_input_2.rs  out_of_order_9.rs  please_reboot_the_univers_6.rs  reverse_the_polarity_of_the_neutron_flow_13.rs  sleepless_in_tokio_19.rs  stacking_boxes_11.rs  structure_sizing_14.rs  there_and_back_again_7.rs  three_and_a_bit_1.rs  to_infinity_15.rs  trying_a_gordian_knot_21.rs  type_conversion_3.rs  waiting_for_godot_22.rs  walks_like_a_duck_quacks_like_a_duck_8.rs  x_marks_the_spot_10.rs
bubble-sorting/: Cargo.toml
bubble-sorting/src/: lib.rs
chat_channel_client/: Cargo.toml
chat_channel_client/src/: main.rs
chat_channel_server/: Cargo.toml
chat_channel_server/src/: main.rs
d2_iterators/: Cargo.toml
d2_iterators/src/: combi.rs  gen_range.rs  into_iter.rs  lib.rs
d3_RC_RefCell/: Cargo.toml
d3_RC_RefCell/src/: main.rs
d3_channels/: Cargo.toml
d3_channels/src/: main.rs  pool.rs
d3_lifetimes/src/: main.rs  v2_closure.rs
d4_builder_derive/src/: lib.rs
d4_composing_object/: Cargo.toml
d4_patterns/: Cargo.toml
d4_patterns/src/: default_properties.rs  main.rs  svg_macro.rs
d5_futures_async_await/: Cargo.toml
d5_futures_async_await/src/: lib.rs  main.rs  simple.rs
hands_on/binary_tree/src/: main.rs
hands_on/binary_tree_balanced/: Cargo.toml
hands_on/binary_tree_balanced/src/: main.rs
hands_on/blobfile/: Cargo.toml
hands_on/blobfile/src/: blob.rs  blobstore.rs  error.rs  lib.rs
hands_on/doubly_linked_list/src/: main.rs
hands_on/dyn_programming/: Cargo.toml
hands_on/ecs_pattern/: Cargo.toml
hands_on/ecs_pattern/src/: data.rs  gen.rs  main.rs  store.rs  system.rs
hands_on/graphs/: Cargo.toml
hands_on/graphs/src/: main.rs  route_structure.rs
hands_on/hash/: Cargo.toml
hands_on/hash/src/: hasher.rs  lib.rs
hands_on/huffman_encoding/: Cargo.toml  readme.md
hands_on/huffman_encoding/src/: main.rs
hands_on/linked_list/src/: main.rs
hands_on/quick-sorting/: Cargo.toml
hands_on/quick-sorting/src/: b_rand.rs  lib.rs
hands_on/skip_lists/: Cargo.toml
hands_on/skip_lists/src/: main.rs
hyper_as_client/: Cargo.toml
hyperurl/: Cargo.toml
hyperurl/src/: main.rs  service.rs  shortener.rs
hyperurl_client/: Cargo.toml  README.md
hyperurl_server/: Cargo.toml
hyperurl_server/src/: main.rs  service.rs
imgtool/: Cargo.toml  README.md
linksnap/: Cargo.toml
linksnap/src/: main.rs  route_handlers.rs  state.rs
logic_gates/src/: lib.rs
mars_weight/src/: main.rs
merge-soring/: Cargo.toml
merge-soring/src/: lib.rs
microservices/hyper-microservice/: .env.example  Cargo.toml
microservices/hyper-microservice/src/: main.rs
microservices/hyper-microservice/src/templates/: mod.rs
oreilly_system_design/1_mandelbrot_set/: Cargo.toml  Readme.md
oreilly_system_design/1_mandelbrot_set/src/: main.rs
oreilly_system_design/2_quickreplace/: Cargo.toml
oreilly_system_design/2_quickreplace/src/: main.rs  parseargs.rs  read_write_files.rs
print/: Cargo.toml  README.md  hrtb.sh
print/src/: hrtb_exercise.rs  main.rs
quick-sorting/: Cargo.toml
quick-sorting/src/: lib.rs
radish_async/: Cargo.toml
radish_async/src/: codec.rs  commands.rs  main.rs
radish_sync/: Cargo.toml  README.md
radish_sync/src/: commands.rs  main.rs
recipes/d2_iterators/: Cargo.toml
recipes/d2_iterators/src/: combi.rs  lib.rs  main.rs
recipes/d3_RC_RefCell/test_data/: v3_data.txt
recipes/d3_channels/src/: main.rs  rayon_pool.rs
recipes/d3_lifetimes/: Cargo.toml
recipes/d4_builder_derive/: Cargo.toml
recipes/d4_patterns/: Cargo.toml
recipes/d4_patterns/src/: svg_macro.rs
recipes/d5_futures_async_await/: Cargo.toml
recipes/d5_futures_async_await/src/: lib.rs  main.rs
recipes/d6_db_diesel/: Cargo.toml
recipes/error_handling/: Cargo.toml
recipes/error_handling/src/: error.rs  lib.rs  main.rs
recipes/error_handling/test_data/: transactions.json
snake_game/: Cargo.toml
snake_game/src/: draw.rs  game.rs  main.rs  snake.rs
tcrprg/: Cargo.toml
tcrprg/1_word_counter/src/: main.rs
tcrprg/2_imgtool/: README.md
tcrprg/3_logic_gates/tests/: half_adder.rs
tcrprg/actor_demo/src/: .workaround
tcrprg/hyperurl_client/src/: main.rs
tcrprg/imgtool/src/: main.rs
tcrprg/theory/: Cargo.toml
tcrprg/theory/src/: bst.rs  (+3 more)
theory/src/: doubly_linked_list.rs  linked_lists.rs
webserver/: Cargo.toml
webserver/public/: index.html  info.html  main.css
webserver/src/: controllers.rs  main.rs  server.rs
(+4 files in other folders)
