[package]
name = "hyperurl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.14.10"
serde_json = "1.0.64"
future = "0.3.19"
lazy_static = "1.4.0"
rust-crypto = "0.2.36"
log = "0.4.14"
pretty_env_logger = "0.4.0"
