[package]
name = "linksnap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
env_logger = "0.9"
serde =  "1.0"
url = "2.2"
log = "0.4"
chrono = "0.4.26"

actix = "0.10"
futures = "0.3"
bytes = "0.5"
serde_json = "1.0"
serde_derive = "1.0"
