[package]
name = "atomics"
version = "0.1.0"
edition = "2021"
default-run = "atomics_main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "progress_report"
path = "src/lib.rs"

[[bin]]
name = "lazy_initialization"
path = "src/lazy.rs"

[[bin]]
name = "atomics_main"
path = "src/main.rs"

[dependencies]
