[package]
name = "atomics"
version = "0.1.0"
edition = "2021"
default-run = "atomics_main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "progress_report"
path = "src/lib.rs"

[[bin]]
name = "lazy_initialization"
path = "src/lazy.rs"

[[bin]]
name = "fetchnmod"
path = "src/fetchnmod.rs"

[[bin]]
name = "progress_report_multithread"
path = "src/progress_report_multithread.rs"

[[bin]]
name = "statistics"
path = "src/statistics.rs"

[[bin]]
name = "atomics_main"
path = "src/main.rs"

[dependencies]
num_cpus = "1.13"
