[package]
name = "blobfile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
failure = "0.1"
failure_derive = "0.1"
rand = "0.7"
hash = { path="../../hands_on/hash" }
