[package]
name = "hyper-microservice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# hyper = { version = "0.14", features = ["full"] }
hyper = { version = "0.14.27", features = ["full"] }
tokio = { version = "1", features = ["full"] }
hyper-util = { git = "https://github.com/hyperium/hyper-util.git" }
slab = "0.4.2"
lazy_static = "1.4.0"
regex = "1.5.4"
log = "0.4"
